--- a/README.Rmd
+++ b/README.Rmd
@@ -1,12 +1,24 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # burrr
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of burrr is to …
+The goal of burrr is to ...
 
 ## Installation
 
@@ -21,7 +33,8 @@ pak::pak("m-pilarski/burrr")
 
 This is a basic example which shows you how to solve a common problem:
 
-``` r
+```{r example}
 library(burrr)
 ## basic example code
 ```
+
